--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -10,26 +10,6 @@ jobs:
       matrix:
         include:
         # Debug templates
-          - platform: linux
-            arch: x86_64
-            target-type: template_debug
-            os: ubuntu-20.04
-
-          - platform: windows
-            arch: x86_32
-            target-type: template_debug
-            os: windows-latest
-
-          - platform: windows
-            arch: x86_64
-            target-type: template_debug
-            os: windows-latest
-
-          - platform: macos
-            arch: universal
-            target-type: template_debug
-            os: macos-latest
-
           - platform: android
             arch: arm64
             target-type: template_debug
@@ -37,41 +17,10 @@ jobs:
 
           - platform: android
             arch: arm32
-            target-type: template_debug
-            os: ubuntu-20.04
-
-          - platform: ios
-            arch: arm64
-            target-type: template_debug
-            os: macos-latest
-
-          - platform: web
-            arch: wasm32
             target-type: template_debug
             os: ubuntu-20.04
 
         # Release templates
-          - platform: linux
-            float-precision: single
-            arch: x86_64
-            target-type: template_release
-            os: ubuntu-20.04
-
-          - platform: windows
-            arch: x86_32
-            target-type: template_release
-            os: windows-latest
-
-          - platform: windows
-            arch: x86_64
-            target-type: template_release
-            os: windows-latest
-          
-          - platform: macos
-            arch: universal
-            target-type: template_release
-            os: macos-latest
-          
           - platform: android
             arch: arm64
             target-type: template_release
@@ -79,16 +28,6 @@ jobs:
           
           - platform: android
             arch: arm32
-            target-type: template_release
-            os: ubuntu-20.04
-          
-          - platform: ios
-            arch: arm64
-            target-type: template_release
-            os: macos-latest
-          
-          - platform: web
-            arch: wasm32
             target-type: template_release
             os: ubuntu-20.04
     runs-on: ${{ matrix.os }}
@@ -99,16 +38,6 @@ jobs:
           submodules: true
           fetch-depth: 0
 
-# Lint
-      #- name: Setup clang-format
-      #  shell: bash
-      #  run: |
-      #    python -m pip install clang-format
-      #- name: Run clang-format
-      #  shell: bash
-      #  run: |
-      #    clang-format src/** --dry-run --Werror
-
 # Build
       - name: 🔗 GDExtension Debug Build
         uses: ./.github/actions/build
@@ -117,43 +46,42 @@ jobs:
           arch: ${{ matrix.arch }}
           build-target-type: ${{ matrix.target-type }}
 
-# Sign
-      - name: Mac Sign
-        # Disable sign if secrets are not set
-        if: ${{ matrix.platform == 'macos' && env.APPLE_CERT_BASE64 }}
-        env:
-          APPLE_CERT_BASE64: ${{ secrets.APPLE_CERT_BASE64 }}
-        uses: ./.github/actions/sign
-        with:
-          FRAMEWORK_PATH: bin/macos/macos.framework
-          APPLE_CERT_BASE64: ${{ secrets.APPLE_CERT_BASE64 }}
-          APPLE_CERT_PASSWORD: ${{ secrets.APPLE_CERT_PASSWORD }}
-          APPLE_DEV_PASSWORD: ${{ secrets.APPLE_DEV_PASSWORD }}
-          APPLE_DEV_ID: ${{ secrets.APPLE_DEV_ID }}
-          APPLE_DEV_TEAM_ID: ${{ secrets.APPLE_DEV_TEAM_ID }}
-          APPLE_DEV_APP_ID: ${{ secrets.APPLE_DEV_APP_ID }}
-
-      - name: Windows - Delete compilation files
-        if: ${{ matrix.platform == 'windows' }}
-        shell: pwsh
-        run: |
-          Remove-Item bin/* -Include *.exp,*.lib,*.pdb -Force
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         with:
-          name: godot-cpp-template-${{ matrix.platform }}-${{ matrix.arch }}-${{ matrix.target-type }}
+          name: GodotCppTest-${{ matrix.platform }}-${{ matrix.arch }}-${{ matrix.target-type }}
           path: |
-            ${{ github.workspace }}/bin/**
+            ${{ github.workspace }}/demo/addons
 
-  # Merges all the build artifacts together into a single godot-cpp-template artifact.
-  # If you comment out this step, all the builds will be uploaded individually.
   merge:
     runs-on: ubuntu-20.04
     needs: build
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     steps:
-      - name: Merge Artifacts
-        uses: actions/upload-artifact/merge@v4
+      - name: Download merged artifact
+        uses: actions/download-artifact@v4
         with:
-          name: godot-cpp-template
-          pattern: godot-cpp-template-*
-          delete-merged: true
+          pattern: GodotCppTest*
+          merge-multiple: true
+
+      - run: |
+          mkdir addons
+          mv GodotCppTest addons/GodotCppTest
+
+      - name: Archive Release
+        uses: thedoctor0/zip-release@0.7.1
+        with:
+          type: zip
+          directory: ${{ github.workspace }}
+          filename: GodotCppTest.zip
+          path: .
+
+      - name: Release asset
+        uses: ncipollo/release-action@v1
+        with:
+          allowUpdates: true
+          artifacts: ${{ github.workspace }}/GodotCppTest.zip
+          omitNameDuringUpdate: true
+          omitBodyDuringUpdate: true
+          token: ${{ secrets.GITHUB_TOKEN }}
