--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,10 @@
 # Godot 4+ specific ignores
 .godot/
+bin
 
 # Ignore library files but not the gdextension file
-demo/bin/*
-!demo/bin/android
-demo/bin/android/*
-!demo/bin/android/.gitkeep
-!demo/bin/linux
-demo/bin/linux/*
-!demo/bin/linux/.gitkeep
-!demo/bin/macos
-demo/bin/macos/*
-!demo/bin/macos/.gitkeep
-!demo/bin/windows
-demo/bin/windows/*
-!demo/bin/windows/.gitkeep
-!demo/bin/*.gdextension
+demo/addons/GodotCppTest/*
+!demo/addons/GodotCppTest/*.gdextension
 .sconsign*.dblite
 
 # Ignore custom.py
